# QuMADA

./: .coverage.py311  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  README.md  ci_requirements.txt  dev_requirements.txt  docs_requirements.txt  gitlab-ci.yml  main.py  metadata.yaml  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: static.yml  test.yml
docs/: collecting.rst  conf.py  database.rst  device_object.rst  examples.rst  index.rst  installation.rst  mapping_gui.rst  metadata.rst  qtools.rst  qumada.rst  tutorials.rst  usage.rst  utils.rst
docs/diagrams/src/: ERD.puml  ERD_fab.puml  ERD_head.puml  ERD_measurement.puml  ER_diagram.plantuml  ER_diagram_old.plantuml  ER_diagramm.plantuml  ER_diagramm_V3.dot  components.plantuml  metadata_activity_diagram.plantuml  program_flow.pantuml  qtools_structure.plantuml
docs/docs/source/: modules.rst
qtools/data/: device.py  domain.py  measurement.py
qtools/instrument/sims/: FZJ_Decadac.yaml
qtools/instrument_drivers/Harvard/: FZJ_Decadac.py
qtools/measurement/: Example_measurements.py  example_template_script.py  inducing_measurement.py  input_mapping.py  measurement.py
qtools/measurement/measurement_for_immediate_use/: SET_testing.py
qtools/ui/: main_window.ui  main_window_ui.py
qtools/utils/: browsefiles.py  init_station.py
src/: main.ipy  main.py
src/examples/: buffered.ipy  buffered_dummy_example.py  buffered_dummy_example_compensation.py  buffered_example1.py  device_object_example.py  example_main_1.ipy  example_main_2.ipy  mapping_gui_test.ipy  parallel_acquisition_example.py  seminar_tutorial.ipynb
src/playground/: qupulse_test.py
src/qtools/: config.cfg
src/qtools/data/: apiclasses.py  base.py  db.py  device.py  domain.py  measurement.py  metadata.py  yaml.py
src/qtools/instrument/: buffer.py  buffered_instruments.py  instrument.py
src/qtools/instrument/buffered_instr/: dummy_dmm_buffered.py
src/qtools/instrument/buffers/: __init__.py  buffer.py  dummy_dmm_buffer.py  mfli_buffer.py  sr830_buffer.py
src/qtools/instrument/mapping/: DUMMY_DAC.json  DUMMY_LOCKIN.json  Decadac.json  __init__.py  base.py  lockin.json  mapping_gui.py
src/qtools/instrument/sims/: FZJ_Decadac.yaml
src/qtools/instrument_drivers/Harvard/: FZJ_Decadac.py
src/qtools/legacy/measurement/: get_from_station.py
src/qtools/measurement/: Example_measurements.py  example_template_script.py  gate_mapping.py  get_from_station.py  jobs.py  measurement.py
src/qtools/measurement/doNd_enhanced/: doNd_enhanced.py
src/qtools/measurement/measurement_for_immediate_use/: SET_testing.py  generic_measurement.py  inducing_measurement.py
src/qtools/measurement/scripts/: __init__.py  generic_measurement.py  inducing_measurement.py
src/qtools/tests/: station_config_test.yaml  test.py
src/qtools/ui/: gate_widget.ui  main_window.ui  main_window_ui.py
src/qtools/ui/cmd2/: app.py
src/qtools/ui/qt/: main_window.ui  main_window_ui.py
src/qtools/utils/: GUI.py  browsefiles.py  generate_sweeps.py  import_submodules.py  init_station.py  load_from_sqlite_db.py  load_save_config.py  mapping_gui_test.py  parameter_file_helpers.py  ramp_parameter.py  resources.py  utils.py
src/qumada/: __init__.py  _version.py  config.cfg  metadata.py
src/qumada/instrument/: buffered_instruments.py  instrument.py
src/qumada/instrument/buffers/: B1500_buffer.py  __init__.py  buffer.py  dummy_dmm_buffer.py  mfli_buffer.py  sr830_buffer.py
src/qumada/instrument/mapping/: DUMMY_LOCKIN.json  GUI_help.txt  __init__.py  base.py  mapping_gui.py
src/qumada/legacy/measurement/: gate_mapping.py  (+1 more)
src/qumada/measurement/: __init__.py  device_object.py  jobs.py  measurement.py  shuttling_scripts.py
src/qumada/parallelization/: workflow.py
src/qumada/utils/: GUI.py  browsefiles.py  device_GUI.py  generate_sweeps.py  import_submodules.py  init_station.py  liveplot.py  load_from_sqlite_db.py  load_save_config.py  parameter_file_helpers.py  plotting.py  plotting_2D.py  ramp_parameter.py  resources.py  utils.py
src/tests/: conftest.py  device_test.py  domain_fixtures.py  domain_test.py  dummy_dmm.py  instrument_test.py  mapping_gui_test.py  mapping_test.py  measurement_test.py  metadata_test.py  plotting_2D.py  terminal.py  test_domain.py  yaml_test.py
(+52 files in other folders)
