[project]
name = "QuMADA"
version = "0.4.1"
description = "Measurement Abstraction and Database Access layer for QCoDeS"
readme = "README.md"
authors = [
    {name = "JARA Institute for Quantum Information"},
]
license = {text = "GPLv3+"}
keywords = ["quantum", "physics", "abstraction", "metadata", "data management"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
]

requires-python = ">=3.9"
dependencies = [
    "qcodes >= 0.37.0",
    "qcodes_contrib_drivers >= 0.18.0",
    "matplotlib",
    "jsonschema",
    "zhinst-toolkit >= 0.3.3",
    "pyqt5",
]

[project.optional-dependencies]
gui = ["plottr"]
spyder = ["spyder"]

[project.urls]
Repository = "https://github.com/qutech/qumada"
Documentation = "https://qumada.readthedocs.io/en/latest/"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
qumada = ["*.json"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
qt_api = "pyqt5"

[tool.coverage.run]
source = [
    "qumada",
]
omit = [
    "*/__init__.py",
    "src/tests/*",
]

[tool.coverage.paths]
source = [
    "src",
    "*/site-packages"
]

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
py_version = 39
