[metadata]
name = qtools
version = 0.1

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[pylint.master]
max-line-length = 120
ignore = FZJ_Decadac.py,Example_measurements.py,SET_testing.py

[mypy]
show_error_codes = True
warn_unused_ignores = True
ignore_missing_imports = True
