[metadata]
name = qtools
version = 0.2

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    qcodes>=0.32.0
    pyqt5
    cmd2
    qtconsole
    plottr

[options.entry_points]
console_scripts =
    qtools-cmd = main:start_console_app

[pylint.master]
max-line-length = 120
ignore = FZJ_Decadac.py,Example_measurements.py,SET_testing.py

[mypy]
show_error_codes = True
warn_unused_ignores = True
ignore_missing_imports = True

[coverage:run]
omit =
    */__init__.py
    src/tests/*
