[metadata]
name = qtools
version = 0.3.2

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    qcodes>=0.32.0
    qtools-metadata @ git+https://git-ce.rwth-aachen.de/qutech/lab_software/qtools/qtools-metadata.git
    matplotlib
    jsonschema
    zhinst-toolkit>=0.3.3
    cmd2
    plottr

[options.extras_require]
gui =
    pyqt5
    qtconsole
spyder =
    spyder

[options.entry_points]
console_scripts =
    qtools-cmd = qtools.ui.cmd2.app:start_console_app

[pylint.master]
max-line-length = 120
ignore = FZJ_Decadac.py,Example_measurements.py,SET_testing.py

[mypy]
show_error_codes = True
warn_unused_ignores = True
ignore_missing_imports = True

[coverage:run]
omit =
    */__init__.py
    src/tests/*
